<resources>
    <string name="app_name">AdyenPointOfSale</string>
    <string name="adyen_terminalflee_test" />
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="API_KEY">API Key</string>
    <string name="company_account">Company Account</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="crypto_version">Cryto Version</string>
    <string name="key_identifier">Key Identifier</string>
    <string name="pass_phrase">Pass Phrase</string>
    <string name="key_version">Key Version</string>
    <string name="title_activity_demo_configration">DemoConfigrationActivity</string>
    <string name="title_activity_scanned_bar_code">ScannedBarCodeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>